--- a/src/Semana3/Ejercicio1.html
+++ b/src/Semana3/Ejercicio1.html
@@ -10,6 +10,14 @@
 
 <title>Mi primera página</title>
 
+<style>
+    
+    h1 {
+        color: blue;
+        text-align: center;
+    } 
+    </style>
+
 </head>
 
 <body>
